<resources>
    <string name="app_name">FilmLog</string>

    <!--default-->
    <string name="aperture">Aperture</string>
    <string name="camera">Camera</string>
    <string name="film">Film</string>
    <string name="focal_length">Focal length</string>
    <string name="format">Format</string>
    <string name="iso">ISO</string>
    <string name="shutter_speed">Shutter speed</string>
    <string name="status">Status</string>
    <string name="status_active">Active</string>
    <string name="status_processed">Processed</string>
    <string name="status_digitised">Digitised</string>
    <string name="status_printed">Printed</string>
    <string name="status_archived">Archived</string>

    <!--Main app bar-->
    <string name="main_floating_action_button_new_film_roll">Add new roll</string>
    <string name="main_app_bar_filter">Workout filter</string>
    <string name="main_app_bar_sort">Sort</string>
    <string name="main_app_bar_sort_group_oldest">Oldest</string>
    <string name="main_app_bar_sort_group_latest">latest</string>
    <string name="main_app_bar_more_option">More option</string>
    <string name="main_app_bar_more_option_backup">Backup</string>
    <string name="main_app_bar_more_option_create_backup">Create backup</string>
    <string name="main_app_bar_more_option_restore_backup">Restore backup</string>
    <string name="main_app_bar_more_option_edit_preset">Edit preset</string>
    <string name="main_app_bar_more_option_support">Support app</string>
    <string name="main_app_bar_workflow_filter_title">Workflow filter</string>
    <string name="main_app_bar_workflow_filter_all">ALL</string>
    <string name="main_app_bar_workflow_filter_cancel">CANCEL</string>
    <string name="main_app_bar_workflow_filter_accept">ACCEPT</string>


    <!--Film roll adapter menu-->
    <string name="film_roll_adapter_menu_edit">Edit</string>
    <string name="film_roll_adapter_menu_delete">Delete</string>
    <string name="film_roll_adapter_menu_workflow">Workflow</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>